[package]
name = "glessite"
version = "0.1.0"
edition = "2021"
authors = ["Louis Gasnault"]
description = "A simple static site generator based on a git repository commits."
readme = "README.md"
license = "MIT"

[dependencies]
env_logger = "0.10.0"
git2 = "0.15.0"
log = "0.4.17"

[profile.release]
opt-level = "z"
debug = 0
strip = true
panic = "abort"
